[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aria-mcp-server"
version = "0.1.6"
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
    "fastmcp>=3.2.4",
    "httpx>=0.28.1",
    "requests>=2.31.0",
    "xmltodict>=0.14.2"
]

[project.scripts]
aria-mcp-server = "aria_mcp_server.server:run"

[tool.hatch.build.targets.wheel]
packages = ["aria_mcp_server"]